[package]
name = "hello_rust"
version = "0.1.0"
authors = ["Waleed Samy <waleedsamygd@protonmail.com>"]
edition = "2018"
default-run = "hello_rust"

[dependencies]
rand = "0.4.0"
unicode-segmentation = "1.6.0"

[[bin]]
name = "guess"
test = false
bench = false

[[bin]]
name = "learn_enum"
test = false
bench = false

[[bin]]
name = "learn_struct"
test = false
bench = false

[[bin]]
name = "rectangle"
test = false
bench = false

[lib]
name = "hello"
path = "src/lib/mod.rs"